--- a/settings.json
+++ b/settings.json
@@ -12,9 +12,9 @@
 	"ig": "https://instagram.com/THEUNKNOWN666",
 	"gt": "https://github.com/HYPER-MOD",
 	"ownername": "© GOKU-SER",
-	"botname":"「 HELENA 」",
+	"botname":"「Queen-Alexa」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 HELENA 」\n© GOKU-SER"
+	"fake": " [Queen-Alexa」\n© GOKU-SER"
 }
