--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-"name": "HELENA",
+"name": "Queen-Alexa",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/ggokul98/Queen-Alexa",
   "logo": "https://www.linkpicture.com/q/HYPER-MOD-LOGO.jpg",
