--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "17034199383",
-	"ownerNumberr": "+17034199383",
-	"botnumber": "17034199383",
+	"ownerNumber": "12342688157",
+	"ownerNumberr": "+12342688157",
+	"botnumber": "12342688157",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+17034199383",
-	"donate": "17034199383",
+	"wa": "wa.me/12342688157",
+	"donate": "12342688157",
 	"ig": "https://instagram.com/THEUNKNOWN666",
-	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© GOKU-SER",
+	"gt": "https://github.com/ggokul98",
+	"ownername": "© HYPER-MOD",
 	"botname":"「Queen-Alexa」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " [Queen-Alexa」\n© GOKU-SER"
+	"fake": " [Queen-Alexa」\n© HYPERMOD"
 }
